# slay

./: Cargo.toml  LICENSE  Makefile  README.md  demo.tape  test.slay
.claude/: CLAUDE.md  history.jsonl  settings.json
crates/slay-tui/: Cargo.toml
crates/slay-tui/src/: command.rs  engine.rs  game.rs  key.rs  lib.rs  main.rs  save.rs  tui.rs
crates/slay-tui/tests/: integration.rs  scripts.rs
crates/slay-tui/tests/scripts/: 01-louse-end-turn.slay  02-add-strike-kill-louse.slay  03-defend-blocks-attack.slay  04-two-enemies.slay  05-win-returns-to-map.slay  06-choose-column.slay
crates/slay-tui/tests/snapshots/: scripts__01-louse-end-turn.snap  scripts__02-add-strike-kill-louse.snap  scripts__03-defend-blocks-attack.snap  scripts__04-two-enemies.snap  scripts__05-win-returns-to-map.snap  scripts__06-choose-column.snap  scripts__snapshot_seeded_map_seed_1.snap  scripts__snapshot_seeded_map_seed_1.snap.new
crates/slay-wasm/: Cargo.toml
crates/slay-wasm/src/: command.rs  engine.rs  lib.rs  persist.rs  render.rs  wasm_backend.rs
crates/slay-wasm/tests/: session.rs  wasm_backend.rs
docs/: card-architecture.md
plans/: act1-notes.md  architecture.md  cards.json  cards.py  command-hints.md  damage-flash.md  event-curses.md  extract_cards.py  extract_potions.py  extract_relics.py  faithful.md  graph-map.md  gremlin_nob_plan.md  guardian.md  hexaghost.md  ideas.md  ironclad-missing-cards.md  ironclad_cards.json  lagavulin.md  large_slimes_plan.md  map-topology.md  monsters.md  neow_plan.md  neutral-cards.md  playthrough_notes.md  potions.json  potions.md  powers.md  project.md  ratatui.md  refactor-relics.md  relic-tiers.md  relics.json  relics_plan.md  runthrough-notes.md  rust-migration.md  save_system.md  scenario-snapshot-testing.md  shop.md  silent-cards.md  (+5 more)
scripts/: 01-basic-combat.slay  02-poison.slay  03-cultist-ritual.slay  04-jaw-worm.slay  05-flame-tackle-dazed.slay  06-strength-and-disarm.slay  07-rest-site.slay  08-card-reward.slay  09-full-run.slay  10-vulnerable-weak.slay
(+251 files in other folders)
