[package]
name = "slay-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { workspace = true }
slay-core = { path = "../slay-core" }
ratatui = "=0.28.1"
crossterm = "=0.28.1"
serde = { workspace = true }
ron = "0.8"
dirs = "5"
ctrlc = "3"
rand = "0.8"

[dev-dependencies]
insta = "=1.40.0"
tempfile = "3"
